Changed background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #00ff00;
+  		background-color: #000000;
 		  font-family: "Helvetica,Arial,FreeSans";
   		color: #ffffff;
     }
@@ -59,9 +59,13 @@
 <h2>License</h2>
 <p>MIT X11</p>
 <h2>Authors</h2>
-<p>geo (geo@darkstar.localhost)<br/>root (root@darkstar.localhost)<br/><br/>      </p>
+<p>geo (geo@darkstar.localhost)
+<br/>root (root@darkstar.localhost)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p> (georgerogers42@aol.com)<br/>      </p>
+<p> (georgerogers42@aol.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
